Added three unordered lists with links
Added Facebook, Google+, and LinkedIn.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     peace sign
   </a>.
 </p>
+<ul>
+  <li><a href="https://www.facebook.com/kristin.oh.37">
+    Facebook
+    </a>
+  </li>
+  <li><a href="https://plus.google.com/u/0/101862755185168979692/posts">
+    Google+
+    </a>
+  </li>
+  <li><a href="Update your public profile settingswww.linkedin.com/pub/kristin-oh/71/50b/809/en">
+    LinkedIn
+    </a>
+  </li>
+</ul>
 
 <p>
   Last updated March 25th, 2015
