input incorrect url for last ul

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     Google+
     </a>
   </li>
-  <li><a href="Update your public profile settingswww.linkedin.com/pub/kristin-oh/71/50b/809/en">
+  <li><a href="www.linkedin.com/pub/kristin-oh/71/50b/809/en">
     LinkedIn
     </a>
   </li>
