--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
   </a>.
 </p>
 <ul>
-  <li><a href="https://www.facebook.com/kristin.oh.37">
+  <li><a href="https://www.facebook.com/kristin.oh.37"
+    target="_blank">
     Facebook
     </a>
   </li>
-  <li><a href="https://plus.google.com/u/0/101862755185168979692/posts">
+  <li><a href="https://plus.google.com/u/0/101862755185168979692/posts"
+    target="_blank">
     Google+
     </a>
   </li>
-  <li><a href="www.linkedin.com/pub/kristin-oh/71/50b/809/en">
-    LinkedIn
+  <li><a href="https://instagram.com/jiyoungbobiyoung/"
+    target="_blank">
+    Instagram
     </a>
   </li>
 </ul>
