changed order of height and width
changed height & width order.  KO

--- a/homework-1.html
+++ b/homework-1.html
@@ -1,7 +1,10 @@
 <h1>Whales</h1>
+
 <p>
   Wikipedia tells us this about
   <strong>whales</strong>:
+</p>
+
   <blockquote>
     Whale is the common name for various marine mammals of the order Catacea.
     The term whale sometimes refers to all cetaceans, but more often it excludes
@@ -14,17 +17,22 @@
       horizontal flukes, and nasal opeings (blowholes) on top of the head.
   </blockquote>
 </p>
+
 <p>
   But I like whales because they are:
+
   <ul>
     <li>Huge!</li>
     <li>Friendly</li>
     <li>Can hold their breath for a long time</li>
   </ul>
 </p>
+
 <h2>Whale Anatomy</h2>
+
 <p>There are some key parts to a whale's anatomy that I think are interesting.
 </p>
+
 <ol>
   <li>
     <strong>Blowhole</strong>:
@@ -48,20 +56,29 @@
       underwater.
   </li>
 </ol>
+
 <h2>Pictures!</h2>
+
 <table>
   <tr>
-    <td><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/9/9e/Humpback_stellwagen_edit.jpg/1280px-Humpback_stellwagen_edit.jpg"
-        height= 200
-        width= 300>
+    <td>
+      <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/9/9e/Humpback_stellwagen_edit.jpg/1280px-Humpback_stellwagen_edit.jpg"
+        width= 300
+        height= 200>
     </td>
-    <td><img src="http://conservationbiology.uw.edu/files/2008/12/webpage-photo1-300x199.jpg"
+    <td>
+      <img src="http://conservationbiology.uw.edu/files/2008/12/webpage-photo1-300x199.jpg"
         height= 180
         width= 280>
     </td>
   </tr>
+
   <tr>
-    <td>Whale jumping out of water</td>
-    <td>Killer whale jumping out of water</td>
+    <td>
+      Whale jumping out of water
+    </td>
+    <td>
+      Killer whale jumping out of water
+    </td>
   </tr>
 </table>
