added header, footer, main
added header, footer, main.

--- a/index.html
+++ b/index.html
@@ -1,34 +1,54 @@
-<img src="https://graph.facebook.com/kristin.oh.37/picture?width=300&height=300"
-    width="150"
-    height="150">
+<!DOCTYPE HTML>
+
+<html>
+  <head>
+    <title>Kristin Oh</title>
+  </head>
+  <body>
+    <header>
+      <img src="https://graph.facebook.com/kristin.oh.37/picture?width=300&height=300"
+          width="150"
+          height="150">
+
 <h1>Kristin Oh</h1>
 
 <p>Code Learner</p>
+</header>
 
-<p>I have a wide
-  <a href="http://en.wikipedia.org/wiki/Peace_symbols"
-    target="_blank">
-    peace sign
-  </a>.
-</p>
-<ul>
-  <li><a href="https://www.facebook.com/kristin.oh.37"
-    target="_blank">
-    Facebook
-    </a>
-  </li>
-  <li><a href="https://plus.google.com/u/0/101862755185168979692/posts"
-    target="_blank">
-    Google+
-    </a>
-  </li>
-  <li><a href="https://instagram.com/jiyoungbobiyoung/"
-    target="_blank">
-    Instagram
-    </a>
-  </li>
-</ul>
+<main>
+  <p>
+    I have a wide
 
-<p>
-  Last updated March 25th, 2015
-</p>
+    <a href="http://en.wikipedia.org/wiki/Peace_symbols"
+      target="_blank">
+      peace sign
+    </a>.
+  </p>
+  <ul>
+    <li>
+      <a href="https://www.facebook.com/kristin.oh.37"
+      target="_blank">
+      Facebook
+      </a>
+    </li>
+    <li>
+      <a href="https://plus.google.com/u/0/101862755185168979692/posts"
+      target="_blank">
+      Google+
+      </a>
+    </li>
+    <li>
+      <a href="https://instagram.com/jiyoungbobiyoung/"
+      target="_blank">
+      Instagram
+      </a>
+    </li>
+  </ul>
+    </main>
+    <footer>
+      <p>
+        Last updated March 25th, 2015
+      </p>
+    </footer>
+  </body>
+</html>
