in class assignment
changed the page to mimic Avand’s.  KO

--- a/index.html
+++ b/index.html
@@ -1,51 +1,52 @@
 <!DOCTYPE HTML>
 
-<html>
+<html style="background-color: lightgray;">
   <head>
     <title>Kristin Oh</title>
   </head>
-  <body>
-    <header>
+  <body style="font-family: arial;">
+    <header style="text-align: center;">
+
       <img src="https://graph.facebook.com/kristin.oh.37/picture?width=300&height=300"
           width="150"
-          height="150">
+          height="150"
+          style="border-radius: 100%;">
 
 <h1>Kristin Oh</h1>
 
 <p>Code Learner</p>
-</header>
 
-<main>
+</header>
+<main style="background-color: white; margin: 20px; padding:20px; border-radius: 10px; box-shadow: 0px 0px 30px slategrey; border-style: solid; border-width: 1px; border-color: green;">
   <p>
     I have a wide
-
-    <a href="http://en.wikipedia.org/wiki/Peace_symbols"
+      <a href="http://en.wikipedia.org/wiki/Peace_symbols"
       target="_blank">
-      peace sign
-    </a>.
+        peace sign
+      </a>.
   </p>
   <ul>
     <li>
       <a href="https://www.facebook.com/kristin.oh.37"
       target="_blank">
-      Facebook
+        Facebook
       </a>
     </li>
     <li>
       <a href="https://plus.google.com/u/0/101862755185168979692/posts"
       target="_blank">
-      Google+
+        Google+
       </a>
     </li>
     <li>
       <a href="https://instagram.com/jiyoungbobiyoung/"
       target="_blank">
-      Instagram
+        Instagram
       </a>
     </li>
   </ul>
     </main>
-    <footer>
+    <footer style="text-align:center; color: darkgray;">
       <p>
         Last updated March 25th, 2015
       </p>
