--- a/index.html
+++ b/index.html
@@ -1,31 +1,46 @@
 <!DOCTYPE HTML>
 
-<html style="background-color: lightgray;">
+<html>
   <head>
     <title>Kristin Oh</title>
+
+    <style>
+    a {
+      color: blue;
+    }
+    main {
+      background-color: white; margin: 20px; padding:20px; border-radius: 10px; box-shadow: 0px 0px 30px slategrey; border-style: solid; border-width: 1px; border-color: green;
+    }
+    body {
+      font-family: arial; background-color: lightgray
+    }
+    header {
+      text-align: center;
+    }
+    img {
+      border-radius: 100%;
+    }
+    footer {
+      font-family: Arial; text-align:center; color: darkgray;
+    }
+    </style>
   </head>
-  <body style="font-family: arial;">
-    <header style="text-align: center;">
 
-      <img src="https://graph.facebook.com/kristin.oh.37/picture?width=300&height=300"
+  <header>
+        <img src="https://graph.facebook.com/kristin.oh.37/picture?width=300&height=300"
           width="150"
-          height="150"
-          style="border-radius: 100%;">
-
+          height="150">
 <h1>Kristin Oh</h1>
-
 <p>Code Learner</p>
-
 </header>
-<main style="background-color: white; margin: 20px; padding:20px; border-radius: 10px; box-shadow: 0px 0px 30px slategrey; border-style: solid; border-width: 1px; border-color: green;">
+<main>
   <p>
     I have a wide
       <a href="http://en.wikipedia.org/wiki/Peace_symbols"
       target="_blank">
-        peace sign
+          peace sign
       </a>.
   </p>
-  <ul>
     <li>
       <a href="https://www.facebook.com/kristin.oh.37"
       target="_blank">
@@ -35,18 +50,18 @@
     <li>
       <a href="https://plus.google.com/u/0/101862755185168979692/posts"
       target="_blank">
-        Google+
+          Google+
       </a>
     </li>
     <li>
       <a href="https://instagram.com/jiyoungbobiyoung/"
       target="_blank">
-        Instagram
+          Instagram
       </a>
     </li>
   </ul>
     </main>
-    <footer style="text-align:center; color: darkgray;">
+    <footer>
       <p>
         Last updated March 25th, 2015
       </p>
