better text wrapping in main
added the style: max-width and setting centering to —> margin: 0 auto

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       color: blue;
     }
     main {
-      background-color: white; margin: 20px; padding:20px; border-radius: 10px; box-shadow: 0px 0px 30px slategrey; border-style: solid; border-width: 1px; border-color: green;
+      background-color: white; margin: 0 auto; padding:20px; border-radius: 10px; box-shadow: 0px 0px 30px slategrey; border-style: solid; border-width: 1px; border-color: gold; max-width: 660px;
     }
     body {
       font-family: arial; background-color: lightgray
