--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
       color: blue;
     }
     main {
-      background-color: white; margin: 0 auto; padding:20px; border-radius: 10px; box-shadow: 0px 0px 30px slategrey; border-style: solid; border-width: 1px; border-color: gold; max-width: 660px;
+      background-color: white; padding:20px;
+      border-radius: 10px; box-shadow: 0px 0px 30px slategrey; border-style: solid; border-width: 1px; border-color: gold;
+
+      max-width: 660px;
+      margin: 0 auto;
     }
     body {
       font-family: arial; background-color: lightgray
@@ -23,6 +27,7 @@
     footer {
       font-family: Arial; text-align:center; color: darkgray;
     }
+
     </style>
   </head>
 
