added acme image
moved image from downloads to file.  Had to rename url file.

--- a/Homework/homework-2.html
+++ b/Homework/homework-2.html
@@ -6,7 +6,7 @@
     <style>
     body {
       font-family: arial;
-      background-image: url(file:///Users/Jehovahjireh/FEWD-30/fewd-30-gh-pages/acme-corp/images/background.png);
+      background-image: url(file:///Users/Jehovahjireh/FEWD-30/fewd-30-gh-pages/acme-corp/images/acme-corp.jpg);
     }
     header {
       position: fixed;
@@ -55,7 +55,7 @@
 
   <body>
     <header>
-      <img src="file:///Users/Jehovahjireh/Downloads/acme-corp.jpg"
+      <img src="file:///Users/Jehovahjireh/Downloads/acme-corp.
         width= 200
         height= 55>
     <nav>
