replaced original homework assignment for turn-in.
for original homework assignment.  KO

--- a/Homework/homework-2.html
+++ b/Homework/homework-2.html
@@ -6,7 +6,7 @@
     <style>
     body {
       font-family: arial;
-      background-image: url(file:///Users/Jehovahjireh/FEWD-30/fewd-30-gh-pages/acme-corp/images/acme-corp.jpg);
+      background-image: url(file:///Users/Jehovahjireh/FEWD-30/fewd-30-gh-pages/acme-corp/images/background.png);
     }
     header {
       position: fixed;
@@ -55,7 +55,7 @@
 
   <body>
     <header>
-      <img src="file:///Users/Jehovahjireh/Downloads/acme-corp.
+      <img src= "file:///Users/Jehovahjireh/FEWD-30/fewd-30-gh-pages/acme-corp/images/acme-corp.jpg"
         width= 200
         height= 55>
     <nav>
