--- a/products.html
+++ b/products.html
@@ -8,9 +8,8 @@
 
   <body>
     <header>
-      <img src="file:///Users/Jehovahjireh/Downloads/acme-corp.jpg"
-        width= 200
-        height= 55>
+      <img src="file:///Users/Jehovahjireh/FEWD-30/fewd-30-gh-pages/acme-corp/images/acme-corp.jpg" width="200" height="55" id="logo" alt="ACME Anvil Corporation">
+
     <nav>
       <ul>
         <li>
