--- a/Homework/homework-2.html
+++ b/Homework/homework-2.html
@@ -12,6 +12,7 @@
 
       <nav>
         <ol>
+          <li><a href="About.html">About ACME Corp</a></li>
           <li><a href="products.html">Products</a></li>
           <li>
             <a href="#" style="background-color: #2A4CB2;
