Start Products page
Start products page

--- a/products.html
+++ b/products.html
@@ -12,6 +12,7 @@
 
     <nav>
       <ul>
+        <li><a href="About.html">About ACME Corp</a></li>
         <li>
           <a href="products.html">Products
           </a>
