--- a/Homework/Homework-4.html
+++ b/Homework/Homework-4.html
@@ -2,33 +2,33 @@
 
 
 
-//  function longestSide() {
-//    var a = prompt("What is a?");
-//    a = parseFloat(a);
-//    var b = prompt("What is b?");
-//    b = parseFloat(b);
-//    var result = Math.sqrt((a * a) + (b * b));
-//    alert("The longest side is " + result.toFixed(2));
-//  }
+ function longestSide() {
+   var a = prompt("What is a?");
+   a = parseFloat(a);
+   var b = prompt("What is b?");
+   b = parseFloat(b);
+   var result = Math.sqrt((a * a) + (b * b));
+   alert("The longest side is " + result.toFixed(2));
+ }
 // longestSide() /*this is to call the function/factory's answer.
-//
-//
-// function radius() {
-// alert("The radius of circle: 2 * pi * r");
-// var rad = prompt("What is the radius?");
-// rad = parseFloat(rad);
-// var result = (2 * Math.PI * rad);
-// alert("The Circumference is " + result.toFixed(2));
-// }
-// radius()
 
 
-// function temperature() {
-// var a = prompt("What's the temp outside in F?");
-// var result = ((a * 2) + 30);
-// alert("In C, that's " + result.toFixed(2))
-// }
-// temperature()
+function radius() {
+alert("The radius of circle: 2 * pi * r");
+var rad = prompt("What is the radius?");
+rad = parseFloat(rad);
+var result = (2 * Math.PI * rad);
+alert("The Circumference is " + result.toFixed(2));
+}
+radius()
+
+
+function temperature() {
+var a = prompt("What's the temp outside in F?");
+var result = ((a * 2) + 30);
+alert("In C, that's " + result.toFixed(2))
+}
+temperature()
 
 function height() {
   var a = prompt("How tall are you in inches?");
