--- a/Homework/Homework-6.html
+++ b/Homework/Homework-6.html
@@ -1,1 +1,48 @@
-save this
+
+<ul>
+  <li>
+    <a href="http://www.imdb.com/title/tt0106611/">
+      Cool Runnings
+      </a>
+  </li>
+  <li>
+    <a href="http://www.imdb.com/title/tt0103064/">
+      Terminator 2
+    </a>
+  </li>
+  <li>
+    <a href="http://www.imdb.com/title/tt0816692/">
+      Interstellar
+    </a>
+  </li>
+</ul>
+
+<script>
+var favoriteMovies = [
+  {
+    name: 'Cool Runnings',
+    year: 1993,
+    url: 'http://www.imdb.com/title/tt0106611/',
+    ratings: [5, 5, 5, 5, 5, 5, 5, 5]
+  },
+  {
+    name: 'Terminator 2',
+    year: 1991,
+    url: 'http://www.imdb.com/title/tt0103064/',
+    ratings: [5, 4, 3, 5, 4, 5, 4, 5, 5, 5, 3]
+  },
+  {
+    name: 'Interstellar',
+    year: 2014,
+    url: 'http://www.imdb.com/title/tt0816692/',
+    ratings: [5, 3, 5, 5, 1, 2, 4, 5, 5, 2]
+   }
+]
+
+// Create a <li> for each movie that looks like this and add it to the list:
+// <li>
+//   <a href="http://www.imdb.com/title/tt0106611/">Cool Runnings</a>
+//   <span>(1993, 5.0 stars, 8 ratings)</span>
+// </li>
+
+</script>
