--- a/Homework/Homework-6.html
+++ b/Homework/Homework-6.html
@@ -1,21 +1,29 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Favorite Movies</title>
+  </head>
+  <body>
+    <ul>
+      <li>
+        <a href="http://www.imdb.com/title/tt0106611/">
+          Cool Runnings
+          </a>
+      </li>
+      <li>
+        <a href="http://www.imdb.com/title/tt0103064/">
+          Terminator 2
+        </a>
+      </li>
+      <li>
+        <a href="http://www.imdb.com/title/tt0816692/">
+          Interstellar
+        </a>
+      </li>
+    </ul>
+  </body>
+</html>
 
-<ul>
-  <li>
-    <a href="http://www.imdb.com/title/tt0106611/">
-      Cool Runnings
-      </a>
-  </li>
-  <li>
-    <a href="http://www.imdb.com/title/tt0103064/">
-      Terminator 2
-    </a>
-  </li>
-  <li>
-    <a href="http://www.imdb.com/title/tt0816692/">
-      Interstellar
-    </a>
-  </li>
-</ul>
 
 <script>
 var favoriteMovies = [
