--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
           Instagram
       </a>
     </li>
+    <li>
+      <a href="http://kristinoh.github.io/FEWD-30/Homework/to-do.html">To-Do List</a>
+    </li>
   </ul>
     </main>
     <footer>
