--- a/Homework/Homework-6.html
+++ b/Homework/Homework-6.html
@@ -5,28 +5,12 @@
   </head>
   <body>
     <ul>
-      <li>
-        <a href="http://www.imdb.com/title/tt0106611/">
-          Cool Runnings
-          </a>
-      </li>
-      <li>
-        <a href="http://www.imdb.com/title/tt0103064/">
-          Terminator 2
-        </a>
-      </li>
-      <li>
-        <a href="http://www.imdb.com/title/tt0816692/">
-          Interstellar
-        </a>
-      </li>
     </ul>
   </body>
 </html>
 
-
 <script>
-var favoriteMovies = [
+var favoriteMovies = [CoolRunnings, Terminator2, Interstellar];
   {
     name: 'Cool Runnings',
     year: 1993,
@@ -47,10 +31,79 @@ var favoriteMovies = [
    }
 ]
 
-// Create a <li> for each movie that looks like this and add it to the list:
-// <li>
-//   <a href="http://www.imdb.com/title/tt0106611/">Cool Runnings</a>
-//   <span>(1993, 5.0 stars, 8 ratings)</span>
-// </li>
+var favoriteMovies = favoriteMovies[i];
+var list = document.querySelector("ul"); //name the var whatever you want - in this case, 'list' - we eventually need this to append child.
+var ratingNumber = favoriteMovies.ratings.length //to get the number of ratings, it's literally 'ratings.length' <--length is to find the number of ratings
+var ratingSum = 0;
+  for (var j=0; j < favoriteMovies.ratings.length; j++) {
+  ratingSum += movie.ratings[j];
+}  //combo -- whaaaat~
 
+var ratingAvg = ratingSum / ratingNumber;
+var ratingAvgRound = Math.round(ratingAvg * 10) / 10;
+
+//creat movie link anchor
+var movieLink = document.createElement("a");  //in html, this would be "<a href="www.movie.com">happy gilmore</a>
+movieLink.setAttribute("href", favoriteMovies.url); //you are setting the links of the FavoriteMovies's urls - because Javascript will go through each of the movies and urls through a loop.  Therefore, you have to set that attribute with ("href", and FavoriteMovies.url);
+movieLink.textContent = favoriteMovies.name;  //favoriteMovies.name is the names of the movies in the var = FavoriteMovies
+
+//create span
+var movieInfo = document.createElement("span");
+movieInfo.textContent = " (favoriteMovies.year"," + ratingAvgRound " stars" + ratingNumber " ratings)";
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// var list = document.querySelector("ul");
+//
+// for (var i=0; i < favoriteMovies.lenth; i++) {
+//   var movie = favoriteMovies[i];
+//
+//   var link = document.createElement("a");
+//   link.setAttribute("href", movie.url);
+//   link.textContent = movie.name;
+//
+//   var totalRating = 0;
+//
+
+// }
+//
+// var avgRating = Math.round((totalRating / movie.ratings.length) * 10) / 10
+//
+// var span = document.createElement("span");
+// span.textContent = "(" + movie.year + "," + avgRating + " stars, " + movie.ratings.length + "ratings");
+//
+// var movieItem = document.creatElement("li");
+// movieItem.appendChild(link);
+// movieItem.appendChild(span);
+// list.appendChild(movieItem);
+// }
 </script>
