--- a/Homework/to-do.html
+++ b/Homework/to-do.html
@@ -28,6 +28,10 @@
         item1.setAttribute("class", "todo-item");
         return item1;
       }
+// this is literally the same thing as "<li class="toDo-Item">text</li>"
+
+
+
 
       function formSubmitted(event) {
         event.preventDefault(); //remember this.  It will always be "preventdefault"
