adding append Children
adding appended children

--- a/Homework/Homework-6.html
+++ b/Homework/Homework-6.html
@@ -51,33 +51,11 @@ movieLink.textContent = favoriteMovies.name;  //favoriteMovies.name is the names
 var movieInfo = document.createElement("span");
 movieInfo.textContent = " (favoriteMovies.year"," + ratingAvgRound " stars" + ratingNumber " ratings)";
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+var movie = document.createElement("li");
+movie.appendChild(link);
+movie.appendChild(span);
+list.appendChild(movieItem);
+}
 
 
 
