--- a/Homework/to-do.html
+++ b/Homework/to-do.html
@@ -15,6 +15,9 @@
 
     <main>
         <ul id="todo-list"></ul>
+        <!-- that is invisible! it's just to place spot (parent)  -->
+
+
     </main>
 
     <script>
