adding more things to website
adding more things

--- a/Final Project/About.html
+++ b/Final Project/About.html
@@ -3,11 +3,25 @@
   <head>
     <title>Yellow Tree</title>
   </head>
-  <link rel="finalCSS" href="/finalCSS.css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href=finalCSS.css media="screen">
 
   <body>
-<p>
-  hello world
-</p>
+    <header>
+      <div id="nav">
+        <ul>
+        <li><a href=#>Mission</a></li>
+        <li><a href="#">Past Events</a></li>
+        <li><a href="#">Get Involved</a></li>
+        <li><a href="#">Inspiration Boards</a></li>
+        <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+      <main>
+        <h1>Welcome!</h1>
+        <div id="yellowtree"><img src=    "file:///Users/KristinOh/GitHub/FEWD-30/Final%20Project/yellowtree.png"</a>
+        </div>
+      </main>
+    </header>
   </body>
+  <footer>Copyright 2015</footer>
 </html>
