is this going online?
changed “Final Project” to “FinalProject” and now unable to see online.

--- a/FinalProject/About.html
+++ b/FinalProject/About.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Yellow Tree</title>
+    <title>Yellow Tree Project</title>
   </head>
   <link rel="stylesheet" href=finalCSS.css media="screen">
 
@@ -19,9 +19,15 @@
     </header>
       <main>
         <h1>Welcome!</h1>
-        <div id="yellowtree"><img src=    "file:///Users/KristinOh/GitHub/FEWD-30/Final%20Project/yellowtree.png"</a>
-        </div>
+        <p>
+          Thank you for stopping by the Yellow Tree Project!
+        </p>
       </main>
   </body>
+
   <footer>Copyright 2015</footer>
 </html>
+
+<!-- use in 'contacts' section
+<div id="yellowtree"><img src=    "file:///Users/KristinOh/GitHub/FEWD-30/FinalProject/yellowtree.png"</a>
+</div> -->
