--- a/FinalProject/About.html
+++ b/FinalProject/About.html
@@ -3,7 +3,9 @@
   <head>
     <title>Yellow Tree Project</title>
   </head>
-  <link rel="stylesheet" href=finalCSS.css media="screen">
+  <link rel="stylesheet" href=finalCSS.css media="all">
+  <link rel="stylesheet" href=finalmobile.css media="(max-width: 660px)">
+  <link rel="stylesheet" href=finalmobile.css media="print">
 
   <body>
     <header>
@@ -22,6 +24,7 @@
         <p>
           Thank you for stopping by the Yellow Tree Project!
         </p>
+
       </main>
   </body>
 
