adding link to mission page!
adding link to mission page!

--- a/FinalProject/About.html
+++ b/FinalProject/About.html
@@ -11,7 +11,7 @@
     <header>
       <div id="nav">
         <ul>
-        <li><a href=#>Mission</a></li>
+        <li><a href="http://kristinoh.github.io/FEWD-30/FinalProject/mission.html">Mission</a></li>
         <li><a href="#">Past Events</a></li>
         <li><a href="#">Get Involved</a></li>
         <li><a href="#">Inspiration Boards</a></li>
