--- a/FinalProject/mission.html
+++ b/FinalProject/mission.html
@@ -8,7 +8,7 @@
     <header>
       <div id="nav">
         <ul>
-        <li><a href="http://www.google.com">Mission</a></li>
+        <li><a href=#>Mission</a></li>
         <li><a href="#">Past Events</a></li>
         <li><a href="#">Get Involved</a></li>
         <li><a href="#">Inspiration Boards</a></li>
