added final project to page
added final project to page

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
     <li>
       <a href="http://kristinoh.github.io/FEWD-30/Homework/to-do.html">To-Do List</a>
     </li>
+    <li>
+      <a href="http:/kristinoh.github.io/FEWD-30/FinalProject/About.html">Yellow Tree Project</a>
+    </li>
   </ul>
     </main>
     <footer>
