--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <a href="http://kristinoh.github.io/FEWD-30/Homework/to-do.html">To-Do List</a>
     </li>
     <li>
-      <a href="http:/kristinoh.github.io/FEWD-30/FinalProject/About.html">Yellow Tree Project</a>
+      <a href="About.html">Yellow Tree Project</a>
     </li>
   </ul>
     </main>
