--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     main {
       background-color: white; padding:20px;
       border-radius: 10px; box-shadow: 0px 0px 30px slategrey; border-style: solid; border-width: 1px; border-color: gold;
-
+      text-align: left;
       max-width: 660px;
       margin: 0 auto;
     }
@@ -37,7 +37,6 @@
           height="150">
 <h1>Kristin Oh</h1>
 <p>Code Learner</p>
-</header>
 <main>
   <p>
     I have a wide
@@ -65,10 +64,11 @@
       </a>
     </li>
     <li>
-      <a href="http://kristinoh.github.io/FEWD-30/Homework/to-do.html">To-Do List</a>
+      <a href="http://kristinoh.github.io/FEWD-30/Homework/to-do.html"
+      target="_blank">To-Do List</a>
     </li>
     <li>
-      <a href="FinalProject/About.html">Yellow Tree Project</a>
+      <a href="FinalProject/About.html" target="_blank">Yellow Tree Project</a>
     </li>
   </ul>
     </main>
