linking more links
linking more links.

--- a/FinalProject/inspiration.html
+++ b/FinalProject/inspiration.html
@@ -21,15 +21,19 @@
       </div>
     </header>
       <main>
-        <h1>Welcome!</h1>
-        <p id="ontop">
-          Thank you for stopping by the Yellow Tree Project!
-        </p>
+        <h1>Inspiration Boards</h1>
+        <a href="//www.pinterest.com/pin/create/button/" data-pin-do="buttonBookmark"  data-pin-color="red" data-pin-height="28"><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_red_28.png" />widget?</a>
 
       </main>
+
+
   </body>
 
   <footer>Copyright 2015</footer>
+
+
+  <script type="text/javascript" async defer src="//assets.pinterest.com/js/pinit.js"></script>
+  </script>
 </html>
 
 <!-- use in 'contacts' section
