--- a/FinalProject/pastevents.html
+++ b/FinalProject/pastevents.html
@@ -21,9 +21,9 @@
       </div>
     </header>
       <main>
-        <h1>Welcome!</h1>
+        <h1>Past Events</h1>
         <p id="ontop">
-          Thank you for stopping by the Yellow Tree Project!
+          Please see photos of what I did -- whaaat.
         </p>
 
       </main>
