--- a/FinalProject/getinvolved.html
+++ b/FinalProject/getinvolved.html
@@ -30,7 +30,6 @@
       text-decoration: none;
     }
 
-
     body {
       margin-top: 50px;
       background-image: url(grass_tree_sky_light_summer-landscape.jpg);
@@ -66,12 +65,6 @@
       text-align: center;
     }*/
 
-    /*use this image in 'contacts' section
-    #yellowtree img {
-      border-radius: 100%;
-      width: 300px;
-      height: 300px;
-    }*/
 
     p {
       color: black;
@@ -97,16 +90,12 @@
         </ul>
       </div>
     </header>
+
     <main>
+      <h1>Get involved!</h1>
       How to get involved!
     </main>
   </body>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"
-  </script>
-  <link rel="stylesheet" href="/css/master.css" media="screen" title="no title" charset="utf-8">
-  <script src="http://cdn."
-  </script>
 
 </html>
 <!-- in console, you can enter in 'map' and 'getCenter' to get longitude and latitude. -->
