--- a/FinalProject/About.html
+++ b/FinalProject/About.html
@@ -11,7 +11,7 @@
     <header>
       <div id="nav">
         <ul>
-        <li><a href="About.html">Home</a></li>
+        <li><a href="About.htmlasdf">Home</a></li>
         <li><a href="mission.html">Mission</a></li>
         <li><a href="pastevents.html">Past Events</a></li>
         <li><a href="getinvolved.html">Get Involved</a></li>
