repairing all the links
repairing all the links on the header.

--- a/FinalProject/getinvolved.html
+++ b/FinalProject/getinvolved.html
@@ -82,11 +82,12 @@
     <header>
       <div id="nav">
         <ul>
-        <li><a href="mission.html">Mission</a></li>
-        <li><a href="pastevents.html">Past Events</a></li>
-        <li><a href="getinvolved.html">Get Involved</a></li>
-        <li><a href="inspiration.html">Inspiration Boards</a></li>
-        <li><a href="contact.html">Contact</a></li>
+          <li><a href="About.html">Home</a></li>
+          <li><a href="mission.html">Mission</a></li>
+          <li><a href="pastevents.html">Past Events</a></li>
+          <li><a href="getinvolved.html">Get Involved</a></li>
+          <li><a href="inspiration.html">Inspiration Boards</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
     </header>
