--- a/FinalProject/mission.html
+++ b/FinalProject/mission.html
@@ -8,12 +8,12 @@
     <header>
       <div id="nav">
         <ul>
-        <li><a href="About.html">Home</a></li>
-        <li><a href="#">Mission</a></li>
-        <li><a href="#">Past Events</a></li>
-        <li><a href="#">Get Involved</a></li>
-        <li><a href="#">Inspiration Boards</a></li>
-        <li><a href="#">Contact</a></li>
+          <li><a href="About.html">Home</a></li>
+          <li><a href="mission.html">Mission</a></li>
+          <li><a href="pastevents.html">Past Events</a></li>
+          <li><a href="getinvolved.html">Get Involved</a></li>
+          <li><a href="inspiration.html">Inspiration Boards</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
     </header>
