added widget for pinterest
add widget for pinterest

--- a/FinalProject/inspiration.html
+++ b/FinalProject/inspiration.html
@@ -22,7 +22,8 @@
     </header>
       <main>
         <h1>Inspiration Boards</h1>
-        <a href="//www.pinterest.com/pin/create/button/" data-pin-do="buttonBookmark"  data-pin-color="red" data-pin-height="28"><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_red_28.png" />widget?</a>
+        <a data-pin-do="embedBoard" href="http://www.pinterest.com/ohjiyoung/food/" data-pin-scale-width="80" data-pin-scale-height="320" data-pin-board-width="400">Follow Kristin Oh's board Food on Pinterest.</a>
+
 
       </main>
 
