--- a/FinalProject/contact.html
+++ b/FinalProject/contact.html
@@ -48,11 +48,11 @@
       <input type="Email" name="Email" value="" placeholder="Email Address">
     </div>
     <div class="form-group">
-      <label>Password</label>
-      <input type="Password" name="Password" value="" placeholder="Password">
+      <label>Comments</label>
+      <input type="Comments" name="Comments" value="" placeholder="Write something...!">
     </div>
     <div class="form-group">
-      <input type="submit" name="submit" value="Save my info!">
+      <input type="submit" name="submit" value="Submit">
     </div>
   </form>
 
