--- a/FinalProject/inspiration.html
+++ b/FinalProject/inspiration.html
@@ -22,7 +22,8 @@
     </header>
       <main>
         <h1>Inspiration Boards</h1>
-        <a data-pin-do="embedBoard" href="http://www.pinterest.com/ohjiyoung/food/" data-pin-scale-width="80" data-pin-scale-height="320" data-pin-board-width="400">Follow Kristin Oh's board Food on Pinterest.</a>
+        <a data-pin-do="embedBoard" href="http://www.pinterest.com/ohjiyoung/food/" data-pin-scale-width="80" data-pin-scale-height="320" data-pin-board-width="400">Food Inspiration</a>
+        <a data-pin-do="embedBoard" href="http://www.pinterest.com/ohjiyoung/party-hosting/" data-pin-scale-width="80" data-pin-scale-height="320" data-pin-board-width="400">Party Hosting Inspiration</a>
 
 
       </main>
