trying to make opacity only the background not text content
trying to make text content solid

--- a/FinalProject/About.html
+++ b/FinalProject/About.html
@@ -20,7 +20,7 @@
         </ul>
       </div>
     </header>
-      <main>
+      <main id="textcontent">
         <h1>Welcome!</h1>
         <p id="ontop">
           Thank you for stopping by the Yellow Tree Project!
