--- a/FinalProject/contact.html
+++ b/FinalProject/contact.html
@@ -27,7 +27,7 @@
         </ul>
       </div>
     </header>
-      <main>
+      <main id="textcontent">
         <h1>Contact</h1>
         <div id="yellowtree" img src="yellowtree.png"/></div>
         <p id="ontop">
