--- a/FinalProject/mission.html
+++ b/FinalProject/mission.html
@@ -17,7 +17,7 @@
         </ul>
       </div>
     </header>
-      <main>
+      <main id="textcontent">
         <h1>Mission Statement</h1>
         <p>
           In 2010, I wanted to define what community meant in my own community.  I saw that everyone I know was already in my community, yet they did not truly know - perhaps even - not care to know much about each other.  We were part of one church going through the motions of shyly greeting one another and moving on with our dayily lives.
