--- a/FinalProject/pastevents.html
+++ b/FinalProject/pastevents.html
@@ -20,7 +20,7 @@
         </ul>
       </div>
     </header>
-      <main>
+      <main id="textcontent">
         <h1>Past Events</h1>
         <p id="ontop">
           Please see photos of what I did -- whaaat.
