--- a/FinalProject/inspiration.html
+++ b/FinalProject/inspiration.html
@@ -24,8 +24,8 @@
         <h1>Inspiration Boards</h1>
         <a data-pin-do="embedBoard" href="http://www.pinterest.com/ohjiyoung/food/" data-pin-scale-width="80" data-pin-scale-height="320" data-pin-board-width="400">Food Inspiration</a>
         <a data-pin-do="embedBoard" href="http://www.pinterest.com/ohjiyoung/party-hosting/" data-pin-scale-width="80" data-pin-scale-height="320" data-pin-board-width="400">Party Hosting Inspiration</a>
-        <a data-pin-do="embedBoard" href="http://www.pinterest.com/ohjiyoung/party-hosting/" data-pin-scale-width="80" data-pin-scale-height="320" data-pin-board-width="400">Art Inspiration</a>
-        <a data-pin-do="embedBoard" href="http://www.pinterest.com/ohjiyoung/party-hosting/" data-pin-scale-width="80" data-pin-scale-height="320" data-pin-board-width="400">Sweet Tings</a>
+        <a data-pin-do="embedBoard" href="http://www.pinterest.com/ohjiyoung/art/" data-pin-scale-width="80" data-pin-scale-height="320" data-pin-board-width="400">Art Inspiration</a>
+        <a data-pin-do="embedBoard" href="http://www.pinterest.com/ohjiyoung/sweet-tings/" data-pin-scale-width="80" data-pin-scale-height="320" data-pin-board-width="400">Sweet Tings</a>
 
       </main>
 
