adding another pinterest widget
adding another rpinterest widget

--- a/FinalProject/inspiration.html
+++ b/FinalProject/inspiration.html
@@ -26,6 +26,7 @@
         <a data-pin-do="embedBoard" href="http://www.pinterest.com/ohjiyoung/party-hosting/" data-pin-scale-width="80" data-pin-scale-height="320" data-pin-board-width="400">Party Hosting Inspiration</a>
         <a data-pin-do="embedBoard" href="http://www.pinterest.com/ohjiyoung/art/" data-pin-scale-width="80" data-pin-scale-height="320" data-pin-board-width="400">Art Inspiration</a>
         <a data-pin-do="embedBoard" href="http://www.pinterest.com/ohjiyoung/sweet-tings/" data-pin-scale-width="80" data-pin-scale-height="320" data-pin-board-width="400">Sweet Tings</a>
+        <a data-pin-do="embedBoard" href="https://www.pinterest.com/ohjiyoung/being-a-lady/"data-pin-scale-width="80" data-pin-scale-height="200" data-pin-board-width="400">        Being A Lady</a>
 
       </main>
 
