--- a/FinalProject/mission.html
+++ b/FinalProject/mission.html
@@ -2,8 +2,12 @@
 <html>
   <head>
     <title>Mission - Yellow Tree Project</title>
-  <link rel="stylesheet" href=missioncss.css media="all">
   </head>
+
+  <link rel="stylesheet" href=finalCSS.css media="all">
+  <link rel="stylesheet" href=finalmobile.css media="(max-width: 660px)">
+  <link rel="stylesheet" href=finalmobile.css media="print">
+  
   <body>
     <header>
       <div id="nav">
