--- a/FinalProject/getinvolved.html
+++ b/FinalProject/getinvolved.html
@@ -2,82 +2,11 @@
 <html>
   <head>
     <title>Get Involved - Yellow Tree Project</title>
-
-    <style media="screen">
-    /** {
-      border: solid;
-      color: black;
-    }*/
-
-    header {
-      margin-top: 0px;
-      text-align: right;
-      position: fixed;
-    }
-
-    #nav li {
-      text-align: right;
-      display: block;
-      padding: 0px 10px 10px 10px;
-      margin: 0px -20px;
-
-    }
-
-    #nav a {
-      font: Helvetica;
-      text-align: center;
-      color:  #999999;
-      text-decoration: none;
-    }
-
-    body {
-      margin-top: 50px;
-      background-image: url(grass_tree_sky_light_summer-landscape.jpg);
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-position: center;
-      position: absolute;
-    }
-
-    main {
-      background-color: white;
-      padding: 10px 10px 10px 10px;
-      border-radius: 10px;
-      box-shadow: 0px 0px 30px slategrey;
-      border-style: solid;
-      border-width: 1px;
-      border-color: gold;
-      opacity: 0.4;
-
-      max-width: 800px;
-      margin: 0px 200px;
-
-    }
-
-
-    h1{
-      margin: 0px auto;
-      font: 70px 'Grand Hotel';
-    }
-    /*h1 {
-      font-size: 400%;
-      font: Helvetica;
-      text-align: center;
-    }*/
-
-
-    p {
-      color: black;
-    }
-
-    footer {
-      backgroud-color: #e7a45d;
-      color: gray;
-      text-align: center;
-    }
-
-    </style>
   </head>
+  <link rel="stylesheet" href=finalCSS.css media="all">
+  <link rel="stylesheet" href=finalmobile.css media="(max-width: 660px)">
+  <link rel="stylesheet" href=finalmobile.css media="print">
+
   <body>
     <header>
       <div id="nav">
@@ -94,7 +23,7 @@
 
     <main>
       <h1>Get involved!</h1>
-      How to get involved!
+      How to get involved! b;aj b;ajb ;ajb ;ajblakjs
     </main>
   </body>
 
