--- a/FinalProject/contact.html
+++ b/FinalProject/contact.html
@@ -3,11 +3,19 @@
   <head>
     <title>Yellow Tree Project</title>
     <style>
-    #yellowtree img {
+    #yellowtree img{
       border-radius: 100%;
       width: 300px;
       height: 300px;
+      float: right;
+      overflow: auto;
+      display: inline;
     }
+
+.form-group{
+    width: 300px;
+  }
+
     </style>
   </head>
   <link rel="stylesheet" href=finalCSS.css media="all">
@@ -27,8 +35,10 @@
         </ul>
       </div>
     </header>
+
       <main id="textcontent">
         <h1>Contact</h1>
+        <h2>Help me name this organization</h2>
         <div id="yellowtree" img src="yellowtree.png"/></div>
         <p id="ontop">
         Stay connected!
@@ -55,13 +65,16 @@
       <input type="submit" name="submit" value="Submit">
     </div>
   </form>
-
       </main>
+  <div id="yellowtree"><img src="file:///Users/KristinOh/GitHub/FEWD-30/FinalProject/yellowtree.png"</a>
+  </div>
+
   </body>
 
   <footer>Copyright 2015</footer>
 </html>
 
-<!-- use in 'contacts' section
-<div id="yellowtree"><img src=    "file:///Users/KristinOh/GitHub/FEWD-30/FinalProject/yellowtree.png"</a>
-</div> -->
+<script>
+// get the text content from the form divs and have it spit out as the comments under the main.
+// the comments section should show up as "First Name Last Name: *enter* "good brunch. let's do it again!" or something like that with a date.
+</script>
