--- a/FinalProject/getinvolved.html
+++ b/FinalProject/getinvolved.html
@@ -23,7 +23,7 @@
 
     <main>
       <h1>Get involved!</h1>
-      How to get involved! b;aj b;ajb ;ajb ;ajblakjs
+      This is where a google maps api will go.
     </main>
   </body>
 
