--- a/bootstraptest.html
+++ b/bootstraptest.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+    <img src="file:///Users/KristinOh/GitHub/FEWD-30/FinalProject/yellowtree.png">
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
