--- a/FinalProject/contact.html
+++ b/FinalProject/contact.html
@@ -3,14 +3,24 @@
   <head>
     <title>Yellow Tree Project</title>
     <style>
-    #yellowtree img{
-      border-radius: 100%;
-      width: 300px;
-      height: 300px;
-      float: right;
-      overflow: auto;
-      display: inline;
-    }
+
+  body  {
+    background: url(yellowtree.png) no-repeat center center fixed;
+    background-size: cover;
+    background-size: cover;
+    background-size: cover;
+    background-size: cover;
+  }
+
+  #comments {
+    padding: 10px 10px 10px 10px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 30px slategrey;
+    border-style: solid;
+    border-width: 1px;
+    border-color: gold;
+    background-color: rgba(255, 255, 255, .4);
+  }
 
 .form-group{
     width: 300px;
@@ -39,8 +49,7 @@
       <main id="textcontent">
         <h1>Contact</h1>
         <h2>Help me name this organization</h2>
-        <div id="yellowtree" img src="yellowtree.png"/></div>
-        <p id="ontop">
+        <p>
         Stay connected!
         </p>
         <form class="" action="index.html" method="post">
@@ -66,7 +75,11 @@
     </div>
   </form>
       </main>
-  <div id="yellowtree"><img src="file:///Users/KristinOh/GitHub/FEWD-30/FinalProject/yellowtree.png"</a>
+
+  <div id="comments">
+    <p>
+      <strong>Comments:</strong>
+    </p>
   </div>
 
   </body>
@@ -77,4 +90,10 @@
 <script>
 // get the text content from the form divs and have it spit out as the comments under the main.
 // the comments section should show up as "First Name Last Name: *enter* "good brunch. let's do it again!" or something like that with a date.
+function (fullname) {
+var firstName = "First Name"
+var lastName = "Last Name"
+var result = firstName + lastName;
+return result;
+};
 </script>
