--- a/FinalProject/contact.html
+++ b/FinalProject/contact.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+
+  </body>
+</html>
 <html>
   <head>
     <title>Yellow Tree Project</title>
@@ -12,7 +15,7 @@
     background-size: cover;
   }
 
-  #comments {
+  #container {
     padding: 10px 10px 10px 10px;
     border-radius: 10px;
     box-shadow: 0px 0px 30px slategrey;
@@ -56,19 +59,19 @@
 
     <div class="form-group">
       <label>First Name</label>
-      <input type="text" name="fname" value="" placeholder="First Name">
+      <input type="text" name="fname" value="" placeholder="First Name" contenteditable>
     </div>
     <div class="form-group">
       <label>Last Name</label>
-      <input type="text" name="lname" value="" placeholder="Last Name">
+      <input type="text" name="lname" value="" placeholder="Last Name" contenteditable>
     </div>
     <div class="form-group">
       <label>Email</label>
-      <input type="Email" name="Email" value="" placeholder="Email Address">
+      <input type="Email" name="Email" value="" placeholder="Email Address" contenteditable>
     </div>
     <div class="form-group">
       <label>Comments</label>
-      <input type="Comments" name="Comments" value="" placeholder="Write something...!">
+      <input type="Comments" name="Comments" value="" placeholder="Write something...!" contenteditable>
     </div>
     <div class="form-group">
       <input type="submit" name="submit" value="Submit">
@@ -76,7 +79,7 @@
   </form>
       </main>
 
-  <div id="comments">
+  <div id="container">
     <p>
       <strong>Comments:</strong>
     </p>
@@ -94,17 +97,22 @@
 var submit= document.querySelector("submit");
 
 function addClicked(clickEvent) {
-  var fName = document.getElementById("fName");
-  var lName = document.getElementById("lName");
-  var comment = document.getElementById("comments")
-  var result = document.getElementById("submit");
+  var fName = document.getElementById("#fName");
+  var lName = document.getElementById("#lName");
+  var comment = document.getElementById("#container")
+  var result = document.getElementById("#submit");
 
   var a = fName.textContent;
   var b = lName.textContent;
+  var c = Comments.textcontent;
   var a = parseInt(a);
   var b = parseInt(b);
-  var completeName = a + b;
-  result.textContent = complete;
+  var c = parseInt(c);
+  var completeName = a + b + c;
+  container.textContent = complete;
+  return result;
 }
 add.addEventLIstener("click", addClicked);
+document.appendChild(container);
+
 </script>
