--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@
     </li>
     <li>
       <a href="https://instagram.com/jiyoungbobiyoung/"
-      target="_blank">
-          Instagram
-      </a>
+      target="_blank">Instagram</a>
     </li>
+    <li><a href="http://kristinoh.github.io/FEWD-30/Homework/homework-1" target="_blank">Whales Homework</li>
     <li>
       <a href="http://kristinoh.github.io/FEWD-30/Homework/to-do.html"
       target="_blank">To-Do List</a>
